# VirtualMoneySystem

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  README.md  build_cli.bat  main.cpp  main.h  pch.h  run_demo.ps1  start.bat  test_api.bat  test_auth.bat  verify_system.ps1
admin/: AdminPortal.cpp  AdminPortal.h  AuditDashboard.cpp  AuditDashboard.h  SystemAuditTools.cpp  SystemAuditTools.h  UserSuspension.cpp  UserSuspension.h
ai/: AnomalyDetector.cpp  AnomalyDetector.h  FraudClassifier.cpp  FraudClassifier.h  FraudPatternAI.cpp  FraudPatternAI.h  SpendClassificationModel.cpp  SpendClassificationModel.h  TransactionPredictor.cpp  TransactionPredictor.h
analytics/: AccountInsights.cpp  AccountInsights.h  AdvancedAnalytics.cpp  AdvancedAnalytics.h  BusinessInsights.cpp  BusinessInsights.h  DashboardData.cpp  DashboardData.h  ExposureReport.cpp  ExposureReport.h  FraudSignalDetector.cpp  FraudSignalDetector.h  HeatmapGenerator.cpp  HeatmapGenerator.h  InsightsDashboard.cpp  InsightsDashboard.h  LiquidityMonitor.cpp  LiquidityMonitor.h  SegmentedStats.cpp  SegmentedStats.h  TransactionStats.cpp  TransactionStats.h  TrendGraphs.cpp  TrendGraphs.h  UsageAnalytics.cpp  UsageAnalytics.h  UsageTracker.cpp  UsageTracker.h  VisualReports.cpp  VisualReports.h
api/: AdminEndpoints.cpp  AdminEndpoints.h  AuthEndpoints.cpp  AuthEndpoints.h  Gateway.cpp  Gateway.h  GraphQLServer.cpp  GraphQLServer.h  HTTPServer.cpp  HTTPServer.h  Middleware.cpp  Middleware.h  OpenAPI.json  RESTServer.cpp  RESTServer.h  Router.cpp  Router.h  Server.cpp  Server.h  WalletEndpoints.cpp  WalletEndpoints.h  WebhookReceiver.cpp  WebhookReceiver.h  gRPCBridge.cpp  gRPCBridge.h
audit/: AuditVerifier.cpp  AuditVerifier.h  HashChain.cpp  HashChain.h  ImmutableLogger.cpp  ImmutableLogger.h
auth/: EncryptionUtils.cpp  EncryptionUtils.h  JWTManager.cpp  JWTManager.h  LoginManager.cpp  LoginManager.h  PasswordHash.cpp  PasswordHash.h  SessionValidator.cpp  SessionValidator.h  UserManager.cpp  UserManager.h
backups/: BackupScheduler.cpp  BackupScheduler.h  ExportEngine.cpp  ExportEngine.h
benchmarks/: PerformanceBenchmark.cpp
blockchain/: BlockValidator.cpp  BlockValidator.h  ChainConnector.cpp  ChainConnector.h  DeFiBridge.cpp  DeFiBridge.h  MultiChainBridge.cpp  MultiChainBridge.h  SelfAuditChain.cpp  SelfAuditChain.h  TokenizationEngine.cpp  TokenizationEngine.h  WalletSync.cpp  WalletSync.h
bootstrap/: EnvironmentLoader.cpp  EnvironmentLoader.h  InitDatabase.cpp  InitDatabase.h  ServiceRegistry.cpp  ServiceRegistry.h
budgeting/: BudgetAlerts.cpp  BudgetAlerts.h  BudgetManager.cpp  BudgetManager.h  SpendingAnalyzer.cpp  SpendingAnalyzer.h
cache/: RedisCache.cpp  RedisCache.h
cards/: CardControls.cpp  CardControls.h  CardManager.cpp  CardManager.h  CardTransactions.cpp  CardTransactions.h
cbdc/: CBDCEngine.cpp  CBDCEngine.h
client/: VirtualMoneyCLI.cpp
compliance/: AMLScanner.cpp  AMLScanner.h  AssetMarketEngine.h  AutomatedReporting.cpp  AutomatedReporting.h  BusinessAML.cpp  BusinessAML.h  DocumentScanner.cpp  DocumentScanner.h  DynamicSanctionsEngine.cpp  DynamicSanctionsEngine.h  GeoPolicyEngine.cpp  GeoPolicyEngine.h  IDVerificationService.cpp  IDVerificationService.h  KYCValidator.cpp  KYCValidator.h  LegalPolicyEngine.cpp  LegalPolicyEngine.h  PersonalRules.cpp  PersonalRules.h  ProfitOptimizationEngine.h  RegulatorReporting.cpp  RegulatorReporting.h  RiskFlagger.cpp  RiskFlagger.h  SystemGovernanceEngine.h  TaxEngine.cpp  TaxEngine.h  TaxFilingEngine.cpp  TaxFilingEngine.h  WatchlistScanner.cpp  WatchlistScanner.h
config/: .env  config.json  environment.h
contracts/: ContractEngine.cpp  ContractEngine.h  EscrowAccount.cpp  EscrowAccount.h  RuleDSLParser.cpp  RuleDSLParser.h  SmartContractEngine.cpp  SmartContractEngine.h  SmartFXRules.cpp  SmartFXRules.h
core/: CPUFeatures.cpp  CPUFeatures.h  CurrencyProfile.cpp  CurrencyProfile.h  CurrencyRegistry.cpp  CurrencyRegistry.h  EconomyZoneManager.cpp  EconomyZoneManager.h  ExchangeRates.cpp  ExchangeRates.h  FeeEngine.cpp  FeeEngine.h  LedgerManager.cpp  LedgerManager.h  LockFreeQueue.h  MemoryPool.h  RetryQueue.cpp  RetryQueue.h  RollbackManager.cpp  RollbackManager.h  TransactionEngine.cpp  TransactionEngine.h  TransactionProcessor.cpp  TransactionProcessor.h  TransactionValidatorSIMD.cpp  TransactionValidatorSIMD.h  Wallet.cpp  Wallet.h
currency/: ConversionEngine.cpp  ConversionEngine.h  CurrencyConverterSIMD.cpp  CurrencyConverterSIMD.h  CurrencyCrisisManager.cpp  CurrencyCrisisManager.h  CurrencyExchange.cpp  CurrencyExchange.h  CurrencyRegistry.cpp  CurrencyRegistry.h  ExchangeRates.cpp  ExchangeRates.h  FXCacheManager.cpp  FXCacheManager.h  FXHistoryLogger.cpp  FXHistoryLogger.h  FXRateFetcher.cpp  FXRateFetcher.h
database/: BackupManager.cpp  BackupManager.h  ConnectionPool.cpp  ConnectionPool.h  DatabaseConnector.cpp  DatabaseConnector.h  DatabaseManager.cpp  DatabaseManager.h  MigrationTools.cpp  MigrationTools.h  ORM.cpp  ORM.h  SQLiteDriver.cpp  SQLiteDriver.h  Schema.sql
devportal/: DeveloperConsole.cpp  DeveloperConsole.h  DeveloperSandbox.cpp  DeveloperSandbox.h  api_reference.md  changelog.md  onboarding_guide.md  test_credentials.md
disputes/: CaseManager.cpp  CaseManager.h  DisputeEngine.cpp  DisputeEngine.h  DisputeManager.cpp  DisputeManager.h  DisputeResolution.cpp  DisputeResolution.h  DisputeRules.cpp  DisputeRules.h  EvidenceLogger.cpp  EvidenceLogger.h  EvidenceManager.cpp  EvidenceManager.h  MediationTools.cpp  MediationTools.h
distributed/: DistributedCluster.cpp  DistributedCluster.h
docs/: architecture.md  duplication_report.md  governance_and_security_model.md  project_audit.md
enterprise/: MultiTenancy.cpp  MultiTenancy.h
export/: CSVExporter.cpp  CSVExporter.h  DataExportManager.cpp  DataExportManager.h  ExportEngine.cpp  ExportEngine.h  PDFExporter.cpp  PDFExporter.h  PDFGenerator.cpp  PDFGenerator.h
fees/: FeeCalculator.cpp  FeeCalculator.h  FeeCalculatorSIMD.cpp  FeeCalculatorSIMD.h  FeeEngine.cpp  FeeEngine.h  FeePolicies.cpp  FeePolicies.h  (+6 more)
(+402 files in other folders)
